# slf-snow-pypi

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.dev  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: README.md
docs/discovery/: 01_raw_idea.md  02_functional_requirements.md  03_requirements.md
docs/discovery/decisions/: 0001-async-http-client-foundation.md  0002-domain-data-model-technology.md  0003-generic-measurement-model.md  0004-missing-vs-zero.md  0005-endpoint-composition-and-current-reduction.md  0006-multi-station-batch-strategy.md  0007-error-and-exception-taxonomy.md  0008-time-and-unit-handling.md  0009-public-api-surface.md  README.md
examples/: run.py
src/slf_snow/: __init__.py  _fields.py  client.py  const.py  exceptions.py  models.py
tests/: conftest.py  test_client.py
tests/fixtures/: imis_daily_snow.json  imis_wfj2_measurements.json
